--- a/index.html
+++ b/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href='https://cdn.boxicons.com/fonts/basic/boxicons.min.css' rel='stylesheet'>
+    <link href='https://cdn.boxicons.com/fonts/brands/boxicons-brands.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.2.0/css/line.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.2.0/css/solid.css">
+    <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.2.0/css/thinline.css">
     <title>portfolio</title>
-    <script src="https://kit.fontawesome.com/d7451e284d.js" crossorigin="anonymous"></script>
   </head>
   <body>
     <div id="root"></div>
+    <script src="https://unicons.iconscout.com/release/v4.2.0/script/monochrome/bundle.js"></script>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
